Implemented CNCStepper and limits

--- a/Mikrostepper/Mikrostepper.vcxproj.filters
+++ b/Mikrostepper/Mikrostepper.vcxproj.filters
@@ -152,9 +152,15 @@
     <ClCompile Include="steppernavigator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="api_wrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="api_wrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
