--- a/Mikrostepper/Optilab.props
+++ b/Mikrostepper/Optilab.props
@@ -5,12 +5,13 @@
   <PropertyGroup />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(OPENCV_DIR)\include;$(DSCAM_DIR);$(CNCAPI_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(OPENCV_DIR)\include;$(DSCAM_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalUsingDirectories>$(CNCAPI_DIR)</AdditionalUsingDirectories>
+      <AdditionalUsingDirectories>
+      </AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(OPENCV_DIR)\lib;$(DSCAM_DIR);$(CNCAPI_DIR);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
