--- a/Mikrostepper/Mikrostepper.vcxproj.filters
+++ b/Mikrostepper/Mikrostepper.vcxproj.filters
@@ -158,6 +158,15 @@
     <ClCompile Include="tinyxml2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="autofocus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_autofocus.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_autofocus.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -208,6 +217,9 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="steppernavigator.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="autofocus.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
