Added GigaPan integration
TBD:
- File names must be ordered column by column
- Bookmark

--- a/Mikrostepper/Mikrostepper.vcxproj.filters
+++ b/Mikrostepper/Mikrostepper.vcxproj.filters
@@ -167,6 +167,9 @@
     <ClCompile Include="GeneratedFiles\Release\moc_autofocus.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="Gigapan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -176,6 +179,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="tinyxml2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Gigapan.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
