Added ToupView SDK, still having some problems with it though. . .

--- a/Mikrostepper/Optilab.props
+++ b/Mikrostepper/Optilab.props
@@ -5,7 +5,7 @@
   <PropertyGroup />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>$(OPENCV_DIR)\include;$(DSCAM_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(OPENCV_DIR)\include;$(DSCAM_DIR);$(TOUP_DIR)\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup>
@@ -14,8 +14,8 @@
       </AdditionalUsingDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(OPENCV_DIR)\lib;$(DSCAM_DIR);$(CNCAPI_DIR);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_core300.lib;opencv_imgcodecs300.lib;opencv_imgproc300.lib;opencv_videoio300.lib;DSCAMSDK.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OPENCV_DIR)\lib;$(DSCAM_DIR);$(CNCAPI_DIR);$(TOUP_DIR)\win\x86\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_core300.lib;opencv_imgcodecs300.lib;opencv_imgproc300.lib;opencv_videoio300.lib;DSCAMSDK.lib;toupcam.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy "$(OPENCV_DIR)\bin\opencv_core300.dll" "$(OutDir)\"
@@ -26,7 +26,8 @@ copy "$(OPENCV_DIR)\bin\opencv_videoio300.dll" "$(OutDir)\"
 copy "$(DSCAM_DIR)\DSCAMSDK.dll" "$(OutDir)\"
 copy "$(CNCAPI_DIR)\CNCUSBControllerAPI.dll" "$(OutDir)\"
 copy "$(CNCAPI_DIR)\CNCUSBControllerLib.dll" "$(OutDir)\"
-copy "$(OPENCV_DIR)\bin\cudart32_65.dll" "$(OutDir)\"</Command>
+copy "$(OPENCV_DIR)\bin\cudart32_65.dll" "$(OutDir)\"
+copy "$(TOUP_DIR)\win\x86\toupcam.dll" "$(OutDir)\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup />
