--- a/Mikrostepper/Mikrostepper.vcxproj.filters
+++ b/Mikrostepper/Mikrostepper.vcxproj.filters
@@ -170,6 +170,15 @@
     <ClCompile Include="Gigapan.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="toupwrapper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_toupwrapper.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_toupwrapper.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -226,6 +235,9 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="autofocus.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="toupwrapper.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
