--- a/Mikrostepper/Mikrostepper.vcxproj.filters
+++ b/Mikrostepper/Mikrostepper.vcxproj.filters
@@ -190,20 +190,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="api_wrapper.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="tinyxml2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Gigapan.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <CustomBuild Include="mikrostepper.qrc">
       <Filter>Resource Files</Filter>
     </CustomBuild>
@@ -250,6 +236,18 @@
       <Filter>Header Files</Filter>
     </CustomBuild>
     <CustomBuild Include="camprop.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Gigapan.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="tinyxml2.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="api_wrapper.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="stdafx.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
   </ItemGroup>
